--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,19 +7,20 @@
     "es6": true
   },
   "globals": {
-    "fail":true
+    "fail": true
   },
-  "extends": "eslint:recommended",
+  "extends": "react-app",
+  "parser": "babel-eslint",
   "parserOptions": {
     "sourceType": "module",
     "ecmaVersion": 2018
   },
   "rules": {
     "no-console": "off",
-    "indent": [ "error", 2 ],
+    "indent": ["error", 2],
     "quotes": ["error", "single", { "allowTemplateLiterals": true }],
     "comma-dangle": ["error", "always-multiline"],
-    "semi": [ "error", "always" ],
-    "no-unused-vars": [1, {"vars": "local", "args": "none"}]
+    "semi": ["error", "always"],
+    "no-unused-vars": [1, { "vars": "local", "args": "none" }]
   }
 }
