--- a/package.json
+++ b/package.json
@@ -2,13 +2,29 @@
   "name": "trader-react",
   "version": "0.1.0",
   "private": true,
+  "main": "src/index.js",
+  "homepage": "/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "JSX": "^1.1.0",
+    "bootstrap": "^4.5.0",
+    "dotenv": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
+    "react-cookies": "^0.1.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-json-view": "^1.19.1",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "superagent": "^5.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
