--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^8.5.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-admin": "^3.7.1",
     "react-bootstrap": "^1.3.0",
     "react-cookies": "^0.1.1",
     "react-dom": "^16.13.1",
