--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "bootstrap": "^4.5.0",
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
+    "mdbreact": "^4.27.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-bootstrap-icons": "^1.0.3-alpha5",
     "react-cookies": "^0.1.1",
     "react-dom": "^16.13.1",
     "react-json-view": "^1.19.1",
