--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "superagent": "^5.3.1"
   },
   "scripts": {
