--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
     "react-bootstrap-icons": "^1.0.3-alpha5",
     "react-cookies": "^0.1.1",
     "react-dom": "^16.13.1",
+    "react-elastic-carousel": "^0.6.7",
     "react-json-view": "^1.19.1",
+    "react-parallax": "^3.0.3",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-scroll-parallax": "^2.3.4",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.3.0",
+    "styled-components": "^5.1.1",
     "superagent": "^5.3.1"
   },
   "scripts": {
