one product style

--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "JSX": "^1.1.0",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "carousel": "0.0.3",
     "dotenv": "^8.2.0",
     "firebase": "^7.17.1",
+    "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
+    "materialize-css": "^1.0.0-rc.2",
     "mdbreact": "^4.27.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
@@ -24,6 +27,7 @@
     "react-dom": "^16.13.1",
     "react-elastic-carousel": "^0.6.7",
     "react-json-view": "^1.19.1",
+    "react-materialize": "^3.9.2",
     "react-parallax": "^3.0.3",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
@@ -34,7 +38,8 @@
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "styled-components": "^5.1.1",
-    "superagent": "^5.3.1"
+    "superagent": "^5.3.1",
+    "swiper": "^6.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
