--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "src/index.js",
   "homepage": "/",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -14,6 +17,7 @@
     "carousel": "0.0.3",
     "dotenv": "^8.2.0",
     "firebase": "^7.17.1",
+    "hover.css": "^2.3.2",
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
     "materialize-css": "^1.0.0-rc.2",
@@ -26,6 +30,7 @@
     "react-cookies": "^0.1.1",
     "react-dom": "^16.13.1",
     "react-elastic-carousel": "^0.6.7",
+    "react-fontawesome": "^1.7.1",
     "react-json-view": "^1.19.1",
     "react-materialize": "^3.9.2",
     "react-parallax": "^3.0.3",
